Add basic configuration and function chaining

--- a/demo.html
+++ b/demo.html
@@ -15,9 +15,12 @@
     <!-- Demos -->
     <script>
       var demo1 = function() {
-        var timer = new HumanTimer();
-
-        console.log("Demo 1 initialized!");
+        var timer1 = HumanTimer({ duration: 1000 });
+		console.log("1", timer1.duration());
+		timer1.duration(500);
+		console.log("2", timer1.duration());
+		console.log("3", timer1.duration(700).duration());
+        console.log("4", timer1.options());
       }
 
       $( document ).ready(function() {
