--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,6 +15,7 @@
 
     <!-- Spec files... -->
     <script src="spec/ConfigurationSpec.js"></script>
+    <script src="spec/TimingSpec.js"></script>
   </head>
 
   <body>
